[package]
name = "oxidation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
argon2 = "0.5.1"
env_logger = "0.10.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
rand = "0.8.5"
rusqlite = "0.29.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
